--- a/serverless.yml
+++ b/serverless.yml
@@ -19,10 +19,14 @@ provider:
       Action: 
         - "dynamodb:PutItem"
         - "dynamodb:GetItem"
-        - "dynamodb:Query"
         - "dynamodb:DeleteItem"
       Resource:
         - "arn:aws:dynamodb:*:*:table/find-face-sessions"
+    - Effect: "Allow"
+      Action: 
+        - "dynamodb:Query"
+      Resource:
+        - "arn:aws:dynamodb:*:*:table/find-face-sessions/index/token-index"
 
 resources:
   Resources:
