--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "dotenv": "^7.0.0",
     "io-ts": "^1.8.5",
     "mime": "^2.4.2",
+    "node-fetch": "^2.5.0",
     "ramda": "^0.26.1",
     "source-map-support": "^0.5.12",
     "uuid": "^3.3.2",
-    "winston": "^2",
-    "node-fetch": "^2.5.0"
+    "winston": "^2"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.24",
